all done and check

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
+HOST=
 PORT=
-DATABASE_NAME=
+DB_URL=
 DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_HOST=
-DATABASE_PORT=
 DATABASE_DIALECT=
 JWT_SECRET=
+UKR_NET_EMAIL=
+UKR_NET_PASSWORD=
